fix listing header being above the layout header in z-index

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,5 +1,5 @@
 header {
-  z-index: 1;
+  z-index: 2;
   background-color: #fff;
   border-bottom: 1px solid rgba(0, 0, 0, 0.075);
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
